Add document fields for non-citizen to certain pops
[#182276172]