@@ -1,21 +1,27 @@
 package org.codeforamerica.shiba.output.documentfieldpreparers;
 
-import org.codeforamerica.shiba.application.Application;
-import org.codeforamerica.shiba.application.parsers.ApplicationDataParser;
-import org.codeforamerica.shiba.output.Document;
-import org.codeforamerica.shiba.output.DocumentField;
-import org.codeforamerica.shiba.output.DocumentFieldType;
-import org.codeforamerica.shiba.output.Recipient;
-import org.codeforamerica.shiba.pages.PageUtils;
-import org.codeforamerica.shiba.pages.data.InputData;
-import org.codeforamerica.shiba.pages.data.Subworkflow;
-import org.springframework.stereotype.Component;
+import static org.codeforamerica.shiba.application.parsers.ApplicationDataParser.Field.EVERYONE_US_CITIZENS;
+import static org.codeforamerica.shiba.application.parsers.ApplicationDataParser.Field.WHO_ARE_NON_US_CITIZENS;
+import static org.codeforamerica.shiba.application.parsers.ApplicationDataParser.Group.HOUSEHOLD;
+import static org.codeforamerica.shiba.application.parsers.ApplicationDataParser.getBooleanValue;
+import static org.codeforamerica.shiba.application.parsers.ApplicationDataParser.getFirstValue;
+import static org.codeforamerica.shiba.application.parsers.ApplicationDataParser.getGroup;
+import static org.codeforamerica.shiba.application.parsers.ApplicationDataParser.getValues;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
+import org.codeforamerica.shiba.application.Application;
+import org.codeforamerica.shiba.application.parsers.ApplicationDataParser.Field;
+import org.codeforamerica.shiba.output.Document;
+import org.codeforamerica.shiba.output.DocumentField;
+import org.codeforamerica.shiba.output.DocumentFieldType;
+import org.codeforamerica.shiba.output.Recipient;
+import org.codeforamerica.shiba.pages.data.Iteration;
+import org.codeforamerica.shiba.pages.data.PagesData;
+import org.springframework.stereotype.Component;
 
 @Component
 public class ListNonUSCitizenPreparer implements DocumentFieldPreparer {
@@ -23,35 +29,46 @@ public class ListNonUSCitizenPreparer implements DocumentFieldPreparer {
   @Override
   public List<DocumentField> prepareDocumentFields(Application application, Document document,
       Recipient recipient) {
-    //Check the status of usCitizen
-    ApplicationDataParser applicationDataParser = new ApplicationDataParser();
     List<DocumentField> nonUSCitizens = new ArrayList<>();
-    if(applicationDataParser.getBooleanValue(application
-                    .getApplicationData()
-                    .getPagesData(), ApplicationDataParser.Field.EVERYONE_US_CITIZENS)){
-      return List.of();
-    }else {
-      //get whoIsNonUSCitizen list
-      List<String> applicant = applicationDataParser.getValues(application
-              .getApplicationData()
-              .getPagesData(), ApplicationDataParser.Field.WHO_ARE_NON_US_CITIZENS).stream().filter(nonCitizen -> nonCitizen.endsWith("applicant")).collect(Collectors.toList());
+    PagesData pagesData = application.getApplicationData().getPagesData();
 
-      if (!applicant.isEmpty()){
-        List<String> nameList = Arrays.stream(applicant.get(0).split(" ")).collect(Collectors.toList());
+    boolean allApplicantsAreCitizens = getBooleanValue(pagesData, EVERYONE_US_CITIZENS);
+    if (allApplicantsAreCitizens) {
+      return List.of();
+    } else {
+      List<String> nonCitizens = getValues(pagesData, WHO_ARE_NON_US_CITIZENS).stream().toList();
+      Optional<String> applicant = nonCitizens.stream()
+          .filter(nonCitizen -> nonCitizen.endsWith("applicant")).findFirst();
+
+      applicant.ifPresent(applicantName -> {
+        List<String> nameList = Arrays.stream(applicantName.split(" "))
+            .collect(Collectors.toList());
         nameList.remove("applicant");
         nonUSCitizens.add(new DocumentField(
-                "whoIsNonUsCitizen",
-                "nameOfApplicantOrSpouse1",
-                String.join(" ", nameList),
-                DocumentFieldType.SINGLE_VALUE,
-                null));
-      }
+            "whoIsNonUsCitizen",
+            "nameOfApplicantOrSpouse1",
+            String.join(" ", nameList),
+            DocumentFieldType.SINGLE_VALUE)
+        );
+      });
+
+      Optional<Iteration> spouseHouseholdMemberInfo = getGroup(application.getApplicationData(),
+          HOUSEHOLD).stream().filter(householdData -> getValues(householdData.getPagesData(),
+                  Field.HOUSEHOLD_INFO_RELATIONSHIP)
+                  .equals(List.of("spouse")))
+          .findFirst();
+
+      spouseHouseholdMemberInfo.ifPresent(iteration -> nonUSCitizens.add(
+          new DocumentField(
+              "whoIsNonUsCitizen",
+              "nameOfApplicantOrSpouse2",
+              String.join(" ", List.of(
+                  getFirstValue(iteration.getPagesData(), Field.HOUSEHOLD_INFO_FIRST_NAME),
+                  getFirstValue(iteration.getPagesData(), Field.HOUSEHOLD_INFO_LAST_NAME)
+              )),
+              DocumentFieldType.SINGLE_VALUE)
+      ));
     }
-
-    //use the application data parser
-    //How do we identify if someone is a citizen or not?
-
-    //whoisNonuscitizen evalutes to true?
 
     return nonUSCitizens;
   }
